<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/submenu_view"
          android:title="@string/menu_view"
          android:icon="@drawable/eye">
		<menu>
			<item android:id="@+id/set_margin_offset" android:title="@string/menu_set_margin_offset"/>
            <item android:id="@+id/rotation_left" android:title="@string/menu_rotation_left"/>
            <item android:id="@+id/rotation_right" android:title="@string/menu_rotation_right"/>
		</menu>
	</item>
	<item android:id="@+id/submenu_zoom"
          android:title="@string/menu_zoom"
          android:icon="@drawable/zoom">
		<menu>
            <item android:id="@+id/zoom_in" android:title="@string/menu_zoom_in"/>
            <item android:id="@+id/zoom_out" android:title="@string/menu_zoom_out"/>
            <item android:id="@+id/zoom_fit" android:title="@string/menu_zoom_fit"/>
            <item android:id="@+id/zoom_fitw" android:title="@string/menu_zoom_fitw"/>
            <item android:id="@+id/zoom_fith" android:title="@string/menu_zoom_fith"/>
            <item android:id="@+id/zoom_enter" android:title="@string/menu_zoom_enter"/>
            <item android:id="@+id/zoom_orig" android:title="@string/menu_zoom_orig"/>
		</menu>
	</item>
	<item android:id="@+id/submenu_fit_content"
          android:title="@string/menu_fit_content"
          android:icon="@drawable/fitcontent">
		<menu>
            <group android:id="@+id/group_fit_content"
                   android:checkableBehavior="single">
                <item android:id="@+id/content_fit_none" android:title="@string/menu_content_fit_none"/>
                <item android:id="@+id/content_fit" android:title="@string/menu_content_fit"/>
                <item android:id="@+id/content_fit_width" android:title="@string/menu_content_fit_width"/>
                <item android:id="@+id/content_fit_height" android:title="@string/menu_content_fit_height"/>
            </group>
		</menu>
	</item>
	<item android:id="@+id/submenu_goto"
          android:title="@string/menu_goto"
          android:icon="@drawable/n_page">
		<menu>
			<item android:id="@+id/goto_first" android:title="@string/menu_goto_first"/>
			<item android:id="@+id/goto_ask" android:title="@string/menu_goto_ask"/>
			<item android:id="@+id/goto_last" android:title="@string/menu_goto_last"/>
		</menu>
	</item>
	<item android:id="@+id/options"
          android:title="@string/menu_file_options"
          android:icon="@drawable/prefs"/>
	<item android:id="@+id/submenu_file"
          android:title="@string/menu_file"
          android:icon="@drawable/utilities">
		<menu>
			<item android:id="@+id/open_file" android:title="@string/menu_file_open"/>
			<item android:id="@+id/about" android:title="@string/menu_file_about"/>
			<item android:id="@+id/quit" android:title="@string/menu_file_quit"/>
		</menu>
	</item>
</menu>

